AI自动分析记录相关功能